fix initial alignment in rooms

--- a/src/components/Rooms/rooms.scss
+++ b/src/components/Rooms/rooms.scss
@@ -24,7 +24,6 @@
                 border: 2px solid rgba(0, 0, 0, 0.2);
                 font-size: 72px;
                 align-self: center;
-                line-height: 71px;
                 height: 7vw;
                 width: 7vw;
                 margin: 2vh;
